Fix flex tab not opening and getting off screen

--- a/packages/rocketchat-theme/client/imports/base.css
+++ b/packages/rocketchat-theme/client/imports/base.css
@@ -2130,6 +2130,7 @@ label.required::after {
 	flex: 1;
 	display: flex;
 	flex-direction: column;
+	max-width: 100%;
 
 	&-wrapper {
 		height: 100%;
